test/data/semantic-errors/^-must-have-integer-operands.jen
notInteger := 'Please, this is a type checking offense'
IS_INTEGER := 8 ^ notInteger
